--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
       - image: cimg/node:latest
     steps:
       - checkout
+      - run: npm install
       - run: npm run lint
       - run: npm test
 workflows:
