--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,10 @@ jobs:
       - run:
           name: Run Tests
           command: npm test
+      - run:
+          name: Check Formatting
+          command: npx prettier --check "src/**/*.js"
+
 workflows:
   version: 2
   build_and_test:
