--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "format": "prettier --write \"src/**/*.js\""
+    "format": "prettier --write \"src/**/*.js\"",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --fix"
   },
   "keywords": [],
   "author": "",
