--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,9 @@ jobs:
       - run:
           name: Check Formatting
           command: npx prettier --check "src/**/*.js"
-      - run:
-          name: Run Lint Check
-          command: npx eslint "src/**/*.{js,jsx}" --fix
+      # - run:
+      #     name: Run Lint Check
+      #     command: npx eslint "src/**/*.{js,jsx}" --fix
 
 workflows:
   version: 2
